# eb_cycles

./: Cargo.toml  README.md  run.sh
src/: cycles.rs  lib.rs
src/cycles/: hour.rs  minute.rs  quarter.rs
tests/: cycles.rs
