[package]
name = "eb_cycles"
version = "0.1.2"
edition = "2021"

description = "Put your thread to sleep during set intervals, or.. 'cycles'.."
readme = "README.md"

authors = ["Emil Bratt <emilbratt@gmail.com>"]

repository = "https://github.com/emilbratt/eb_cycles"

keywords = ["sleep", "wait", "cycles", "eb_cycles"]

license = "AGPL-3.0+"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.9.0" }

[lib]
doctest = false
